# covid

./: .gitignore  CMakeLists.txt
covid/: CMakeLists.txt  covid.cpp  covid.h  exception.h  socket.cpp  socket.h
